# CPP-Web-Framework

./: CMakeLists.txt
core/: CMakeLists.txt  Database.cpp  Database.hpp  Model.hpp  Response.cpp  Response.hpp  Router.cpp  Router.hpp  View.cpp  View.hpp
src/: CMakeLists.txt  main.cpp
src/core/: Application.cpp  Application.hpp  Request.cpp  Request.hpp  Response.cpp  Response.hpp
src/views/: home.html
